create rating container structure and style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Interactive Rating</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="center-container">
+      <div class="star-container">
+        <img src="assets/icon-star.svg" alt="star-rating">
+      </div>
+      <div class="middle-container">
+        <h1> How did we do?</h1>
+        <p>Please let us know how we did with your support request. All feedback is apreciated to help us improve our offering!</p>
+      </div>
+      <div class="rating-container">
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
+      </div>
+      <div class="submit-container">
+        <button>SUBMIT</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
