--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="center-container">
+    <div class="first-container" >
       <div class="star-container">
         <img src="assets/icon-star.svg" alt="star-rating">
       </div>
@@ -28,6 +28,19 @@
       </div>
       <div class="submit-container">
         <button>SUBMIT</button>
+      </div>
+    </div>
+    
+    <div class="second-container" style="display: none;">
+      <div>
+        <img src="assets/illustration-thank-you.svg" alt="">
+      </div>
+      <div class="selected-container">
+        <p>You selected <span>1</span> out of 5</p>
+      </div>
+      <div class="middle-container">
+        <h1>Thank you!</h1>
+        <p>We apreciated you taking the time to give a rating if you ever need more support, dont't hesitate to get in touch!</p>
       </div>
     </div>
   </div>
