--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon">
   <title>Interactive Rating</title>
 </head>
 <body>
@@ -19,18 +20,17 @@
       </div>
       <div class="rating-container">
         <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
+          <li class="rating selected">1</li>
+          <li class="rating">2</li>
+          <li class="rating">3</li>
+          <li class="rating">4</li>
+          <li class="rating">5</li>
         </ul>
       </div>
       <div class="submit-container">
-        <button>SUBMIT</button>
+        <button class="submit">SUBMIT</button>
       </div>
     </div>
-    
     <div class="second-container" style="display: none;">
       <div>
         <img src="assets/illustration-thank-you.svg" alt="">
